--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
 			<artifactId>lettuce-core</artifactId>
 			<version>6.1.5.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>3.7.1</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.testcontainers</groupId>
